add modals for coffee order grind and add water states

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.5
-  wolt_responsive_layout_grid: ^0.0.2
+  wolt_responsive_layout_grid: ^0.0.3
+  wolt_modal_sheet:
+    path: ..
   demo_ui_components:
     path: ../demo_ui_components
 
