--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ">=2.19.2 <4.0.0"
-  flutter: ">=3.7.2"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -20,4 +19,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # Test lib.
-  test:
+  test: ^1.18.2
