--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: wolt_modal_sheet
 description: This package provides a responsive modal with multiple pages, motion animation for page transitions, and scrollable content within each page.
 version: 0.0.3
-repository: https://github.com/my_org/my_repo
+repository: https://github.com/woltapp/wolt_modal_sheet
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
