--- a/demo_ui_components/pubspec.yaml
+++ b/demo_ui_components/pubspec.yaml
@@ -1,8 +1,10 @@
 name: demo_ui_components
 description: Module to contain commonly shared ui components in example modules
 publish_to: "none"
+
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: '>=2.19.2 <4.0.0'
+  flutter: '>=3.7.2'
 
 dependencies:
   flutter:
