--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.6 <4.0.0'
+  sdk: '>=2.19.2 <4.0.0'
+  flutter: '>=3.7.2'
 
 dependencies:
   flutter:
