--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 0.1.3
 repository: https://github.com/woltapp/wolt_modal_sheet
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: '>=2.19.2 <4.0.0'
+  flutter: '>=3.7.2'
 
 dependencies:
   flutter:
