--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   wolt_responsive_layout_grid: ^0.0.3
   demo_ui_components:
     path: ../demo_ui_components
+  device_info_plus: ^9.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
