Pass keyboard visibility to the modal sheet page
check only min extent

Repaint after keyboard closing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_keyboard_visibility: ">=6.0.0"
 
 flutter:
   uses-material-design: true
