--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -1,6 +1,7 @@
 name: playground
 description: A playground to test various use cases with the wolt modal sheet with imperative navigation
 publish_to: "none"
+version: 1.0.0
 
 environment:
   sdk: '>=2.19.2 <4.0.0'
@@ -20,6 +21,9 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.1
   test: ^1.18.2
+  patrol: ^3.5.0
+  patrol_finders: ^2.0.1+1
+
 
 flutter:
   uses-material-design: true
@@ -27,3 +31,11 @@ flutter:
   assets:
     - lib/assets/images/
     - lib/assets/fonts/
+
+patrol: 
+  android:
+    package_name: com.wolt_modal_sheet.playground.playground
+  ios:
+    bundle_id: com.woltmodalsheet.playground.playground
+  macos:
+    bundle_id: pl.leancode.patrol.macos.example
