--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,11 @@
 name: check
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
-  # Curently, this workflow is triggered by pull request events only.
+  # Currently, this workflow is triggered by pull request events only.
   # Uncomment the following line to run this workflow on push events
   # push:
   #   branches:
@@ -11,51 +15,17 @@ on:
       - main
 
 jobs:
-  flutter-analyze:
-    name: flutter analyze
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.7.2' # Uses the minimum supported version.
-          channel: 'stable'
-      # Setup Melos
-      - name: Setup Melos
-        run: |
-          dart pub global activate melos
-      # Run Melos bootstrap
-      - name: Melos bootstrap
-        run: |
-          melos bootstrap
-      # Get Flutter version
-      - name: Get Flutter version
-        run: flutter --version
-      # Get dependencies
-      - name: Get dependencies
-        run: flutter pub get
-      # Run flutter analyze
-      - name: flutter analyze
-        run: flutter analyze
+  semantic_pull_request:
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
 
-  dart-format:
-    name: dart format
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.7.2' # Uses the minimum supported version.
-          channel: 'stable'
-      # Setup Melos
-      - name: Setup Melos
-        run: |
-          dart pub global activate melos
-      # Run Melos bootstrap
-      - name: Melos bootstrap
-        run: |
-          melos bootstrap
-      # CHeck if there are formatting issues
-      - name: Check formatting
-        run: |
-          dart format --set-exit-if-changed .
+  spell-check:
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
+    with:
+      includes: "**/*.md"
+      modified_files_only: false
+
+  build:
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    with:
+      flutter_channel: stable
+      min_coverage: 0 
