--- a/demo_ui_components/pubspec.yaml
+++ b/demo_ui_components/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   equatable: ^2.0.5
   collection: ^1.16.0
   wolt_responsive_layout_grid: ^0.0.3
+  wolt_modal_sheet:
+    path: ..
 
 dev_dependencies:
   flutter_lints: ^2.0.1
