--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,5 +1,7 @@
 name: Check
 
+define: &flutter_version "3.10.6" # Uses the minimum supported version.
+
 on:
   # Curently, this workflow is triggered by pull request events only.
   # Uncomment the following line to run this workflow on push events
@@ -18,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.6' # Uses the minimum supported version.
+          flutter-version: *flutter_version
           channel: 'stable'
       # Get Flutter version
       - name: Get Flutter version
@@ -49,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.6' # Uses the minimum supported version.
+          flutter-version: *flutter_version
           channel: 'stable'
       # Get Flutter version
       - name: Get Flutter version
@@ -79,7 +81,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.6' # Uses the minimum supported version.
+          flutter-version: *flutter_version
           channel: 'stable'
       # Get Flutter version
       - name: Get Flutter version
