change pull_request_target to pull_request

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -1,5 +1,5 @@
 name: Deploy to Firebase Hosting on PR
-'on': pull_request_target
+'on': pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
