Add coffee maker navigator 2 example to Firebase Deploy

--- a/.firebaserc
+++ b/.firebaserc
@@ -13,6 +13,9 @@
         ],
         "playground_navigator2": [
           "playgroundnavigator2woltexample"
+        ],
+        "coffeemakernavigator2": [
+          "coffeemakernavigator2"
         ]
       }
     }
