--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ example/pubspec.lock
 coffee_maker/pubspec.lock
 playground/pubspec.lock
 playground_navigator2/pubspec.lock
+coffee_maker_navigator_2/pubspec.lock
 
 # pubspec_overrides
 pubspec_overrides.yaml
@@ -52,6 +53,7 @@ example/pubspec_overrides.yaml
 coffee_maker/pubspec_overrides.yaml
 playground/pubspec_overrides.yaml
 playground_navigator2/pubspec_overrides.yaml
+coffee_maker_navigator_2/pubspec_overrides.yaml
 
 # Symbolication related
 app.*.symbols
