--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2.16.0
         with:
+          flutter-version: '3.13.0' # Uses the minimum supported version.
           channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       # Get Flutter version
       - name: Get Flutter version
         run: flutter --version
@@ -50,8 +50,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2.16.0
         with:
+          flutter-version: '3.13.0' # Uses the minimum supported version.
           channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       # Get Flutter version
       - name: Get Flutter version
         run: flutter --version
@@ -80,8 +80,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2.16.0
         with:
+          flutter-version: '3.13.0' # Uses the minimum supported version.
           channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       # Get Flutter version
       - name: Get Flutter version
         run: flutter --version
