--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,8 +10,8 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - uses: subosito/flutter-action@v2.16.0
         with:
+          flutter-version: '3.13.0' # Uses the minimum supported version.
           channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       - run: flutter build web --release --web-renderer=canvaskit
         working-directory: ./coffee_maker
       - run: flutter build web --release --web-renderer=canvaskit
