--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wolt_modal_sheet
-description: This package provides a responsive modal with multiple pages, motion animation for page transitions, and scrollable content within each page.
+description: This package provides trail a responsive modal with multiple pages, motion animation for page transitions, and scrollable content within each page.
 version: 0.6.0
 repository: https://github.com/woltapp/wolt_modal_sheet
 
