Add support for RTL side sheet

--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   equatable: ^2.0.5
   wolt_modal_sheet:
     path: ..
