--- a/melos.yaml
+++ b/melos.yaml
@@ -2,6 +2,7 @@ name: wolt_modal_sheet
 repository: https://github.com/woltapp/wolt_modal_sheet
 
 packages:
+  - . ## This is the root package
   - coffee_maker
   - coffee_maker_navigator_2
   - demo_ui_components
