--- a/coffee_maker_navigator_2/pubspec.yaml
+++ b/coffee_maker_navigator_2/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.1
   wolt_responsive_layout_grid: ^0.0.3
+  wolt_di:
+    path: ../wolt_di
   wolt_modal_sheet:
     path: ..
   demo_ui_components:
