feat(analyze): Add DCM and fix potentiall bugs, depreciations and also easy dcm fixes, ensure you are enabling ignored rules and fix them one by one at some point later

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,10 @@ jobs:
         with:
           flutter-version: '3.13.0' # Uses the minimum supported version.
           channel: stable
+      - name: Install DCM
+        uses: CQLabs/setup-dcm@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       # Get Flutter version
       - name: Get Flutter version
         run: flutter --version
@@ -32,12 +36,12 @@ jobs:
       # Run Melos bootstrap
       - name: Melos bootstrap
         run: melos bootstrap
-      # Run flutter analyze for the main package
-      - name: Run flutter analyze
-        run: flutter analyze
-      - name: Check if flutter analyze passes
-        run: echo $?
-      # Run melos analyze to find analzyer issues in demos
+      # # Run flutter analyze for the main package
+      # - name: Run flutter analyze
+      #   run: flutter analyze
+      # - name: Check if flutter analyze passes
+      #   run: echo $?
+      # Run melos analyze to find analzyer issues using DCM.dev for both Flutter and Dart
       - name: Run melos analyze
         run: melos analyze
       - name: Check if melos analyze passes
