--- a/playground/analysis_options.yaml
+++ b/playground/analysis_options.yaml
@@ -1,2 +1,7 @@
 include: package:flutter_lints/flutter.yaml
-
+#dart_code_metrics:
+#  extends:
+#    - recommended
+#  rules:
+#    - prefer-single-widget-per-file: false
+#    - avoid-unsafe-collection-methods: false
