Add wolt state management

--- a/coffee_maker_navigator_2/pubspec.yaml
+++ b/coffee_maker_navigator_2/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
     path: ..
   demo_ui_components:
     path: ../demo_ui_components
+  wolt_state_management:
+    path: ../wolt_state_management
 
 dev_dependencies:
   flutter_lints: ^2.0.1
