--- a/coffee_maker_navigator_2/widgetbook/pubspec.yaml
+++ b/coffee_maker_navigator_2/widgetbook/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../
   demo_ui_components:
     path: ../../demo_ui_components
+  assets:
+    path: ../assets
 
 dev_dependencies:
   flutter_test:
