--- a/coffee_maker_navigator_2/widgetbook/pubspec.yaml
+++ b/coffee_maker_navigator_2/widgetbook/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.5.4 <4.0.0'
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
