--- a/melos.yaml
+++ b/melos.yaml
@@ -4,7 +4,7 @@ repository: https://github.com/woltapp/wolt_modal_sheet
 packages:
   - . ## This is the root package
   - coffee_maker
-  - coffee_maker_navigator_2/**
+  - coffee_maker_navigator_2
   - demo_ui_components
   - playground
   - playground_navigator2
