--- a/coffee_maker_navigator_2/widgetbook/pubspec.yaml
+++ b/coffee_maker_navigator_2/widgetbook/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.5.4 <4.0.0'
+  sdk: '>=3.0.6 <4.0.0'
   flutter: ">=3.16.0"
 
 dependencies:
@@ -24,7 +24,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   widgetbook_generator: ^3.9.0
-  build_runner: ^2.4.13
+  build_runner:  # Omit explicit version so it resolves to the supported version
 
 flutter:
   uses-material-design: true
