--- a/examples/coffee_maker/pubspec.yaml
+++ b/examples/coffee_maker/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   provider: ^6.0.5
   wolt_responsive_layout_grid: ^0.0.3
   wolt_modal_sheet:
-    path: ..
+    path: ../..
   demo_ui_components:
     path: ../demo_ui_components
 
