--- a/examples/demo_ui_components/pubspec.yaml
+++ b/examples/demo_ui_components/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   wolt_responsive_layout_grid: ^0.0.3
   google_fonts: 6.0.0
   wolt_modal_sheet:
-    path: ..
+    path: ../..
 
 dev_dependencies:
   flutter_lints: ^2.0.1
