--- a/examples/playground_navigator2/pubspec.yaml
+++ b/examples/playground_navigator2/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   wolt_modal_sheet:
-    path: ..
+    path: ../..
   demo_ui_components:
     path: ../demo_ui_components
 
