--- a/examples/coffee_maker_navigator_2/widgetbook/pubspec.yaml
+++ b/examples/coffee_maker_navigator_2/widgetbook/pubspec.yaml
@@ -13,15 +13,15 @@ dependencies:
   widgetbook: ^3.10.0
   widgetbook_annotation: ^3.2.0
   wolt_state_management:
-    path: ../../packages/wolt_state_management
+    path: ../../../packages/wolt_state_management
   wolt_modal_sheet:
-    path: ../..
+    path: ../../..
   coffee_maker_navigator_2:
-    path: ../coffee_maker_navigator_2
+    path: ../
   demo_ui_components:
-    path: ../demo_ui_components
+    path: ../../demo_ui_components
   assets:
-    path: ../coffee_maker_navigator_2/assets
+    path: ../assets
 
 dev_dependencies:
   flutter_test:
