--- a/.github/workflows/widgetbook.yml
+++ b/.github/workflows/widgetbook.yml
@@ -23,6 +23,7 @@ jobs:
         working-directory: widgetbook
         run: |
           flutter pub get
+          cd examples/coffee_maker_navigator_2/widgetbook && dart run build_runner build -d 
           flutter build web -t examples/coffee_maker_navigator_2/widgetbook/lib/main.dart
 
       - name: Install Widgetbook CLI
