Refactor modal sheet layout and type constructors for improved readability and consistency
- Updated WoltModalSheetLayout to use super.key in constructor.
- Refactored WoltBottomSheetType, WoltDialogType, and WoltSideSheetType constructors to utilize super for parameters.
- Simplified WoltAnimatedModalBarrier and WoltStickyActionBarWrapper constructors by using super.key.
- Modified WoltModalSheetRoute to use super.settings in constructor.
- Removed library name in wolt_modal_sheet.dart for cleaner export.
- Updated dependency injector to use super.key and super.child.
- Updated pubspec.yaml files for wolt_di and wolt_state_management to reflect new SDK and Flutter versions, and updated dev dependencies.
- Added comprehensive tests for StatefulValueNotifier and ValueState classes to ensure correct behavior across various states and transitions.
- Added new test files for stateful value notifier and value state to enhance test coverage.

--- a/examples/coffee_maker_navigator_2/pubspec.yaml
+++ b/examples/coffee_maker_navigator_2/pubspec.yaml
@@ -3,8 +3,8 @@ description: The coffee maker example project to demonstrate the usage of wolt_m
 publish_to: "none"
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.16.0'
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.0"
 
 dependencies:
   flutter:
@@ -24,8 +24,9 @@ dependencies:
     path: ../../packages/wolt_state_management
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
-  test: ^1.18.2
+  flutter_lints: ^6.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
