--- a/packages/wolt_state_management/pubspec.yaml
+++ b/packages/wolt_state_management/pubspec.yaml
@@ -2,13 +2,15 @@ name: wolt_state_management
 version: "3.0.0"
 
 environment:
-  sdk: ">=3.1.5 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  mocktail: ^1.0.2
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  mocktail: ^1.0.2
