--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,30 +9,30 @@ topics:
   - bottom-sheet
   - custom-modal
 screenshots:
-  - description: 'WoltModalSheet page elements'
+  - description: "WoltModalSheet page elements"
     path: doc/bottom_sheet_elements.jpeg
-  - description: 'WoltModalSheet page layers'
+  - description: "WoltModalSheet page layers"
     path: doc/modal_sheet_page.png
-  - description: 'Experience multi-page navigation in WoltModalSheet.'
+  - description: "Experience multi-page navigation in WoltModalSheet."
     path: doc/ss_multi.gif
-  - description: 'Scroll with ease in WoltModalSheet.'
+  - description: "Scroll with ease in WoltModalSheet."
     path: doc/ss_scrolling.gif
-  - description: 'Responsive modals for different screen sizes.'
+  - description: "Responsive modals for different screen sizes."
     path: doc/ss_type_builder.gif
-  - description: 'Custom modal types in WoltModalSheet.'
+  - description: "Custom modal types in WoltModalSheet."
     path: doc/ss_custom_modals.gif
-  - description: 'Pagination motion in WoltModalSheet.'
+  - description: "Pagination motion in WoltModalSheet."
     path: doc/ss_motion_pagination.gif
-  - description: 'Scrolling motion in WoltModalSheet.'
+  - description: "Scrolling motion in WoltModalSheet."
     path: doc/ss_scroll_motion.gif
-  - description: 'Declarative navigation in WoltModalSheet.'
+  - description: "Declarative navigation in WoltModalSheet."
     path: doc/ss_navigator_2.gif
-  - description: 'Dynamic pagination in action in WoltModalSheet.'
+  - description: "Dynamic pagination in action in WoltModalSheet."
     path: doc/ss_dynamic_pagination.gif
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-  flutter: ">=3.16.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.0"
 
 dependencies:
   flutter:
@@ -42,10 +42,8 @@ flutter:
   uses-material-design: true
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^6.0.0
   # Flutter test tools
   flutter_test:
     sdk: flutter
-  # Test lib.
-  test: ^1.18.2
-  melos: ^3.1.1
+  melos: ^6.3.3
